fix playlist
