# tvgo/docs/swagger.json
@@ -129,9 +129,28 @@
                 "operationId": "search-all-playlist",
                 "parameters": [
                     {
+                        "type": "boolean",
+                        "name": "isVisible",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
-                        "description": "Searching by name or description",
-                        "name": "search",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "VIP",
+                            "SPORT",
+                            "FREE"
+                        ],
+                        "type": "string",
+                        "x-enum-varnames": [
+                            "VIP",
+                            "SPORT",
+                            "FREE"
+                        ],
+                        "name": "type",
                         "in": "query"
                     },
                     {
@@ -652,11 +671,27 @@
         }
     },
     "definitions": {
+        "ChannelType": {
+            "type": "string",
+            "enum": [
+                "VIP",
+                "SPORT",
+                "FREE"
+            ],
+            "x-enum-varnames": [
+                "VIP",
+                "SPORT",
+                "FREE"
+            ]
+        },
         "CreatePlaylistDto": {
             "type": "object",
             "properties": {
                 "channelLink": {
                     "type": "string"
+                },
+                "channelType": {
+                    "$ref": "#/definitions/ChannelType"
                 },
                 "description": {
                     "type": "string"
@@ -716,6 +751,9 @@
             "properties": {
                 "channelLink": {
                     "type": "string"
+                },
+                "channelType": {
+                    "$ref": "#/definitions/ChannelType"
                 },
                 "description": {
                     "type": "string"
@@ -779,6 +817,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 },
                 "updatedAt": {
